[gd_scene load_steps=13 format=2]

[ext_resource path="res://Script/letras/PressStart2P.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://imagens/BackgroundTelaInicial.jpeg" type="Texture" id=2]
[ext_resource path="res://Script/primeiraTela.gd" type="Script" id=3]
[ext_resource path="res://Cenas/popUpControl.tscn" type="PackedScene" id=4]
[ext_resource path="res://Cenas/PopUpCreditos.tscn" type="PackedScene" id=5]
[ext_resource path="res://Cenas/PopUpObjetivo.tscn" type="PackedScene" id=6]

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="Theme" id=2]
Button/colors/font_color = Color( 0, 0, 0, 1 )
Button/colors/font_color_disabled = Color( 0, 0, 0, 1 )
Button/colors/font_color_focus = Color( 0, 0, 0, 1 )
Button/colors/font_color_hover = Color( 0, 0, 0, 1 )
Button/colors/font_color_pressed = Color( 0, 0, 0, 1 )
Button/constants/hseparation = 0
Button/fonts/font = null
Button/styles/disabled = null
Button/styles/focus = SubResource( 3 )
Button/styles/hover = SubResource( 4 )
Button/styles/normal = SubResource( 5 )
Button/styles/pressed = SubResource( 6 )

[sub_resource type="DynamicFont" id=1]
size = 33
font_data = ExtResource( 1 )

[node name="StartScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = 81.0
rect_pivot_offset = Vector2( 182, 400 )
script = ExtResource( 3 )
__meta__ = {
"_edit_vertical_guides_": [ 1024.0 ]
}

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -77.0
texture = ExtResource( 2 )
expand = true
stretch_mode = 1

[node name="Controls" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -148.5
margin_top = -30.5
margin_right = 148.5
margin_bottom = 113.5

[node name="StartBtn" type="Button" parent="Controls"]
margin_right = 297.0
margin_bottom = 33.0
focus_neighbour_top = NodePath("../QuitBtn")
theme = SubResource( 2 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0.364706, 1, 0.537255, 1 )
custom_colors/font_color_hover = Color( 0.827451, 0.231373, 0.203922, 1 )
custom_colors/font_color_pressed = Color( 0.905882, 0.494118, 0.0431373, 1 )
custom_fonts/font = SubResource( 1 )
text = "Iniciar"
expand_icon = true

[node name="ObjetivoBtn" type="Button" parent="Controls"]
margin_top = 37.0
margin_right = 297.0
margin_bottom = 70.0
focus_neighbour_top = NodePath("../QuitBtn")
theme = SubResource( 2 )
custom_colors/font_color_focus = Color( 0.827451, 0.231373, 0.203922, 1 )
custom_colors/font_color = Color( 0.364706, 1, 0.537255, 1 )
custom_colors/font_color_hover = Color( 0.827451, 0.231373, 0.203922, 1 )
custom_colors/font_color_pressed = Color( 0.905882, 0.494118, 0.0431373, 1 )
custom_fonts/font = SubResource( 1 )
text = "Objetivo"
expand_icon = true

[node name="ControlBtn" type="Button" parent="Controls"]
margin_top = 74.0
margin_right = 297.0
margin_bottom = 107.0
theme = SubResource( 2 )
custom_colors/font_color_focus = Color( 0.827451, 0.231373, 0.203922, 1 )
custom_colors/font_color = Color( 0.364706, 1, 0.537255, 1 )
custom_colors/font_color_hover = Color( 0.827451, 0.231373, 0.203922, 1 )
custom_colors/font_color_pressed = Color( 0.905882, 0.494118, 0.0431373, 1 )
custom_fonts/font = SubResource( 1 )
text = "Controles"
expand_icon = true

[node name="CredBtn" type="Button" parent="Controls"]
margin_top = 111.0
margin_right = 297.0
margin_bottom = 144.0
focus_neighbour_bottom = NodePath("../StartBtn")
theme = SubResource( 2 )
custom_colors/font_color_focus = Color( 0.827451, 0.231373, 0.203922, 1 )
custom_colors/font_color = Color( 0.364706, 1, 0.537255, 1 )
custom_colors/font_color_hover = Color( 0.827451, 0.231373, 0.203922, 1 )
custom_colors/font_color_pressed = Color( 0.905882, 0.494118, 0.0431373, 1 )
custom_fonts/font = SubResource( 1 )
text = "Cr√©ditos"
expand_icon = true

[node name="QuitBtn" type="Button" parent="Controls"]
margin_top = 148.0
margin_right = 297.0
margin_bottom = 181.0
focus_neighbour_bottom = NodePath("../StartBtn")
theme = SubResource( 2 )
custom_colors/font_color_focus = Color( 0.827451, 0.231373, 0.203922, 1 )
custom_colors/font_color = Color( 0.364706, 1, 0.537255, 1 )
custom_colors/font_color_hover = Color( 0.827451, 0.231373, 0.203922, 1 )
custom_colors/font_color_pressed = Color( 0.905882, 0.494118, 0.0431373, 1 )
custom_fonts/font = SubResource( 1 )
text = "Sair"
expand_icon = true

[node name="PopUpControl" parent="." instance=ExtResource( 4 )]
visible = false

[node name="Objetivo" parent="." instance=ExtResource( 6 )]
visible = false

[node name="Creditos" parent="." instance=ExtResource( 5 )]
visible = false

[connection signal="pressed" from="Controls/StartBtn" to="." method="_on_startBtn_pressed"]
[connection signal="pressed" from="Controls/ObjetivoBtn" to="." method="_on_objetivoBtn_pressed"]
[connection signal="pressed" from="Controls/ControlBtn" to="." method="_on_controlBtn_pressed"]
[connection signal="pressed" from="Controls/CredBtn" to="." method="_on_credBtn_pressed"]
[connection signal="pressed" from="Controls/QuitBtn" to="." method="_on_quitBtn_pressed"]
